fix: align and page breaks when printing

--- a/src/style.css
+++ b/src/style.css
@@ -1,3 +1,23 @@
 body {
   margin: 2rem;
 }
+
+#diagram,
+h2,
+h3 {
+  text-align: center;
+  margin-block-start: 2rem;
+}
+
+.avoid-page-break-after {
+  page-break-after: avoid;
+}
+
+.page-break-before {
+  page-break-before: always;
+}
+
+pre,
+blockquote {
+  page-break-inside: avoid;
+}
